    compiled against 2.2 are provided.
  * Remove Daniel Stone from list of uploaders.
  * We no longer ship 035_HEAD_Content-Length_Fix_From_CVS.  Closes: #298143
  * Don't start the server on reload.  Closes: #316321
  * Install S91/K09 links, not S91/K91, also only support not starting
    through defaults file to cover upgrades from old
    installations. Closes: #359977, #349655

 -- Tollef Fog Heen <tfheen@debian.org>  Thu, 17 Aug 2006 14:02:58 +0200

apache2 (2.2.3-1~exp.r170) experimental; urgency=low

  [ Jeroen van Wolffelaar ]
  * Staging upload to experimental of subversion revision r170

  [ Thom May, Tollef Fog Heen, Fabio M. Di Nitto and Adam Conrad ]
  * New Upstream Release.  Closes: #344072
    http://httpd.apache.org/docs/2.2/new_features_2_2.html has a list of
    new features and changes.
    - Fixes LFS support. Closes: #341460, #285337, #241223
    - Fixes off-by-one error in mod_rewrite ldap schema handling
      (CVE-2006-3747)
    - Fixes XSS issue in mod_imap/mod_imagemap (CVE-2005-3352).  
      Closes: #343467.
    - mpm_perchild no longer exists, so closing bugs for perchild.
      Closes: #236193, #238586
    - Fixes PHP POST with SSLVerifyClient. Closes: 353443
  * Build-depend on lsb-release and pick up the branding from there.
  * Build-depend on apr-util 1.0 which is now in a separate source
    package.
  * Mangle the Debian layout to be more FHS compatible
  * No longer build-conflict with libgdbm-dev
  * Use external PCRE  
  * Make apache2-utils stop providing apache2-utils.  Also make it stop
    conflicting with itself.
  * Rename default site from default-site to just default.
  * Try to migrate modules which used to be built-in:, alias, mime,
    authz_host, autoindex, dir, env, negotiation, setenvif, status.
  * Mod imap has been renamed to imagemap, ditto for auth_ldap =>
    authnz_ldap.  Cope with that in postinst.
  * Stop globbing in apache2.conf.  
    Closes: #337817, #340955, #348189, #379015, #368497