@@ -8,11 +8,11 @@ fi
 #enable cgid, but only on new installs.
 if [ -z "$2" ]; then
 	a2dismod cgi >/dev/null || true
-        a2enmod cgid >/dev/null || echo "It looks like you've deleted /etc/apache2/mods-available/cgid.load, so mod_cgid cannot be enabled.  To fix this, please purge and reinstall apache2-common."
+        a2enmod cgid >/dev/null || echo "It looks like you've deleted /etc/apache2/mods-available/cgid.load, so mod_cgid cannot be enabled.  To fix this, please purge and reinstall apache2.2-common."
 fi
 
 if [ -x "/etc/init.d/apache2" ]; then
-        update-rc.d apache2 defaults 91 09 >/dev/null
+        update-rc.d apache2 defaults 91 >/dev/null
         if [ -x /usr/sbin/invoke-rc.d ]; then
                 invoke-rc.d apache2 start ||true
         else
