@@ -8,7 +8,7 @@ fi
 #enable cgi, but only on new installs.
 if [ -z "$2" ]; then
 	a2dismod cgid >/dev/null || true
-        a2enmod cgi >/dev/null || echo "It looks like you've deleted /etc/apache2/mods-available/cgi.load, so cgi can not be enabled.  To fix this, please purge and reinstall apache2-common."
+        a2enmod cgi >/dev/null || echo "It looks like you've deleted /etc/apache2/mods-available/cgi.load, so cgi can not be enabled.  To fix this, please purge and reinstall apache2.2-common."
 fi
 
 if [ -x "/etc/init.d/apache2" ]; then
