@@ -1,0 +1,1 @@
+usr/share/man/man8/apxs2.8
